# maker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Gemfile  LICENSE.txt  README.md  maker.gemspec  pyproject.toml
data/: book1.csv  book1.xlsx
lib/: maker.rb
lib/maker/: application.old  application.rb  cmdlist.old  cmdlist.rb  env.rb  make.rb  templates.rb  utils.old  utils.rb  version.rb
lib/maker/commands/: addon.rb  app.rb  cfg.rb  gen.rb  new.rb
lib/maker/templates/: addons.rb  config.rb  env_develop.rb  env_production.rb  env_test.rb  gitignore.rb  license.rb  project.rb  readme.rb  tmp_cpp.rb  tmp_hpp.rb  tmp_main.rb  tmp_main_hello.rb  typedef.rb
src/maker/: __main__.py  cli.py
src/maker/processing/: pipeline.py
tests/: test_cli.py
